--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	    <h2>Things I Want to Buy with My Salary</h2>
+    <ol>
+        <li data-ns-test="shoppingList">Laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Gaming Console</li>
+    </ol>
+    
+    <h2>Holiday Destinations After Getting a Job</h2>
+    <ul>
+        <li data-ns-test="holidayList">Bali, Indonesia</li>
+        <li data-ns-test="holidayList">Paris, France</li>
+        <li data-ns-test="holidayList">Kyoto, Japan</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
